--- a/app/gifts-cards.html
+++ b/app/gifts-cards.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/404.css">
   <link rel="stylesheet" href="css/contacts.css">
+  <link rel="stylesheet" href="css/gifts-cards.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/global.css">
@@ -14,25 +16,32 @@
   <script src="js/footer.js" defer></script>
   <title>Document</title>
 </head>
+
 <body>
 
   <div class="main__wrapper">
-    
-    <section class="error">
+
+    <section class="giftcards">
       <div class="container">
         <ul class="breadcrumb">
           <li><a href="#">Home</a></li>
-          <li>Error 404</li>
+          <li>Contacts</li>
         </ul>
-        <h1 class="error__title">404</h1>
-        <p class="error__text">
-          Sorry, the page you requested was not found 
-        </p>
-        <form class="form__search">
-          <input type="text" placeholder="Search product">
-          <button><img src="images/arrow-search.svg" alt=""></button> 
-        </form>
-        <p class="error__text">Start for <a href="#">home page</a></p>
+        
+      </div>
+    </section>
+
+    <section class="subscribe">
+      <div class="container">
+        <div class="subscribe__title">Keep up to date with <span>news</span></div>
+        <p class="subscribe__text">Sign up for news, helpful articles and special offers from Labebe</p>
+        <div class="subscribe__wrapper">
+          <form class="form__search">
+            <input type="text" placeholder="Email address">
+            <button><img src="images/arrow-search.svg" alt=""></button> 
+          </form>
+          <p class="subscribe__policy">By registering, you agree to our <a href="#">privacy policy</a>. </p>
+        </div>
       </div>
     </section>
 
@@ -46,22 +55,29 @@
             <div class="footer__category-title">About</div>
             <ul class="footer__category-list">
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">About Us</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Gifts Cards</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Gifts Cards</a>
+              </li>
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Blog</a></li>
             </ul>
           </div>
           <div class="footer__category-item">
             <div class="footer__category-title">Shop</div>
             <ul class="footer__category-list">
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Children's furniture</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Children's mattresses</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Children's
+                  furniture</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Children's
+                  mattresses</a></li>
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Linens</a></li>
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Toys</a></li>
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Strollers</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Child car seats</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Bathing accessories</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Feeding accessories</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Promotional offers</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Child car seats</a>
+              </li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Bathing
+                  accessories</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Feeding
+                  accessories</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Promotional
+                  offers</a></li>
             </ul>
           </div>
           <div class="footer__category-item">
@@ -70,16 +86,21 @@
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Payment</a></li>
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Shipping</a></li>
               <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Warranty</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Return policy</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Return policy</a>
+              </li>
             </ul>
           </div>
           <div class="footer__category-item">
             <div class="footer__category-title">Contact Us</div>
             <ul class="footer__category-list">
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Call: 599 84 56 76</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">E-mail: babylandgeorgia@gmail.com  </a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Address: Georgia, Tbilisi, 25 Al. Kazbegi Ave. (M2 Building)</a></li>
-              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Mon - Sun 10:00 - 19:00</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Call: 599 84 56
+                  76</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">E-mail:
+                  babylandgeorgia@gmail.com </a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Address: Georgia,
+                  Tbilisi, 25 Al. Kazbegi Ave. (M2 Building)</a></li>
+              <li class="footer__category-list__item"><a href="#" class="footer__category-link link">Mon - Sun 10:00 -
+                  19:00</a></li>
             </ul>
           </div>
           <div class="footer__category-item">
@@ -102,7 +123,7 @@
                 <img src="images/discover.svg" alt="">
               </div>
               <div class="footer__info-rights">
-                © Labebe 2021. All Rights Reserved 
+                © Labebe 2021. All Rights Reserved
               </div>
             </div>
             <ul class="footer__info-list">
@@ -117,4 +138,5 @@
     </footer>
   </div>
 </body>
+
 </html>
