--- a/app/gifts-cards.html
+++ b/app/gifts-cards.html
@@ -21,13 +21,71 @@
 
   <div class="main__wrapper">
 
-    <section class="giftcards">
+    <section class="giftscards">
+      <div class="giftscards__banner">
+        <div class="giftscards__banner-info">
+          <h1 class="giftscards__banner-info__title">Gifts Cards <sup>4</sup></h1>
+          <p class="giftscards__banner-info__text">
+            Labebe Gift Cards are the perfect choice for any occasion, no matter the reason. Make your family happy,
+            surprise your friends, congratulate your colleagues! By the amount of the electronic certificate, you can
+            choose any product on our website.
+          </p>
+        </div>
+        <div class="giftscards__banner-img">
+          <img src="images/giftscards-banner.png" alt="">
+        </div>
+      </div>
       <div class="container">
         <ul class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li>Contacts</li>
+          <li><a class="link" href="#">Home</a></li>
+          <li>Gifts Cards</li>
         </ul>
-        
+        <div class="giftscards__wrapper">
+          <div class="card">
+            <div class="card__img radius">
+              <img src="images/gift-card.png" alt="">
+            </div>
+            <div class="card__info">
+              <div class="card__info-name">Gift Card 50 GEL</div>
+              <div class="card__info-category">Gifts Cards</div>
+              <div class="card__info-stock">In Stock</div>
+              <div class="card__info-price">50 ₾</div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__img radius">
+              <img src="images/gift-card.png" alt="">
+            </div>
+            <div class="card__info">
+              <div class="card__info-name">Gift Card 50 GEL</div>
+              <div class="card__info-category">Gifts Cards</div>
+              <div class="card__info-stock">In Stock</div>
+              <div class="card__info-price">50 ₾</div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__img radius">
+              <img src="images/gift-card.png" alt="">
+            </div>
+            <div class="card__info">
+              <div class="card__info-name">Gift Card 50 GEL</div>
+              <div class="card__info-category">Gifts Cards</div>
+              <div class="card__info-stock">In Stock</div>
+              <div class="card__info-price">50 ₾</div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__img radius">
+              <img src="images/gift-card.png" alt="">
+            </div>
+            <div class="card__info">
+              <div class="card__info-name">Gift Card 50 GEL</div>
+              <div class="card__info-category">Gifts Cards</div>
+              <div class="card__info-stock">In Stock</div>
+              <div class="card__info-price">50 ₾</div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
