--- a/app/gifts-cards.html
+++ b/app/gifts-cards.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/404.css">
   <link rel="stylesheet" href="css/contacts.css">
   <link rel="stylesheet" href="css/gifts-cards.css">
+  <link rel="stylesheet" href="css/subscribe.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/global.css">
