--- a/app/gifts-cards.html
+++ b/app/gifts-cards.html
@@ -23,16 +23,16 @@
   <div class="main__wrapper">
 
     <section class="giftscards">
-      <div class="giftscards__banner">
-        <div class="giftscards__banner-info">
-          <h1 class="giftscards__banner-info__title">Gifts Cards <sup>4</sup></h1>
-          <p class="giftscards__banner-info__text">
+      <div class="banner">
+        <div class="banner-info">
+          <h1 class="banner-info__title h1">Gifts Cards <sup class="sup">4</sup></h1>
+          <p class="banner-info__text">
             Labebe Gift Cards are the perfect choice for any occasion, no matter the reason. Make your family happy,
             surprise your friends, congratulate your colleagues! By the amount of the electronic certificate, you can
             choose any product on our website.
           </p>
         </div>
-        <div class="giftscards__banner-img">
+        <div class="banner-img">
           <img src="images/giftscards-banner.png" alt="">
         </div>
       </div>
