--- a/app/blog.html
+++ b/app/blog.html
@@ -9,11 +9,14 @@
   <link rel="stylesheet" href="css/404.css">
   <link rel="stylesheet" href="css/contacts.css">
   <link rel="stylesheet" href="css/gifts-cards.css">
+  <link rel="stylesheet" href="css/reviews-and-questions.css">
+  <link rel="stylesheet" href="css/blog.css">
   <link rel="stylesheet" href="css/subscribe.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/media.css">
+  <script src="js/tabs.js"></script>
   <script src="js/footer.js" defer></script>
   <title>Document</title>
 </head>
@@ -22,71 +25,132 @@
 
   <div class="main__wrapper">
 
-    <section class="giftscards">
+    <section class="blog">
       <div class="banner">
         <div class="banner-info">
-          <h1 class="banner-info__title h1">Gifts Cards <sup class="sup">4</sup></h1>
+          <h1 class="banner-info__title h1">Blog <sup class="sup">25</sup></h1>
           <p class="banner-info__text">
-            Labebe Gift Cards are the perfect choice for any occasion, no matter the reason. Make your family happy,
-            surprise your friends, congratulate your colleagues! By the amount of the electronic certificate, you can
-            choose any product on our website.
+            Our blog is a knowledge base accumulated over the years to help pregnant women and new mothers. We want you
+            to feel our care for you and your child.
           </p>
         </div>
         <div class="banner-img">
-          <img src="images/giftscards-banner.png" alt="">
+          <img src="images/blog-banner.png" alt="">
         </div>
       </div>
       <div class="container">
         <ul class="breadcrumb">
           <li><a class="link" href="#">Home</a></li>
-          <li>Gifts Cards</li>
+          <li>Reviews and questions</li>
         </ul>
-        <div class="giftscards__wrapper">
-          <div class="card">
-            <div class="card__img radius">
-              <img src="images/gift-card.png" alt="">
-            </div>
-            <div class="card__info">
-              <div class="card__info-name">Gift Card 50 GEL</div>
-              <div class="card__info-category">Gifts Cards</div>
-              <div class="card__info-stock">In Stock</div>
-              <div class="card__info-price">50 ₾</div>
-            </div>
+        <ul class="blog__tabs">
+          <li class="blog__tabs-item active__blog-tab" data-btn="1">Furniture</li>
+          <li class="blog__tabs-item" data-btn="2">Advice</li>
+          <li class="blog__tabs-item" data-btn="3">Emotions</li>
+          <li class="blog__tabs-item" data-btn="4">Selection of goods</li>
+          <li class="blog__tabs-item" data-btn="5">6 and older</li>
+          <li class="blog__tabs-item" data-btn="6">From 2 to 6</li>
+        </ul>
+        <div class="blog__box">
+          <div class="blog__box-search"></div>
+          <div class="blog__box-filter"></div>
+        </div>
+        <div class="blog__post-wrapper">
+          <div class="blog__post-img">
+            <img src="images/blog-post-1.png" alt="">
           </div>
-          <div class="card">
-            <div class="card__img radius">
-              <img src="images/gift-card.png" alt="">
-            </div>
-            <div class="card__info">
-              <div class="card__info-name">Gift Card 50 GEL</div>
-              <div class="card__info-category">Gifts Cards</div>
-              <div class="card__info-stock">In Stock</div>
-              <div class="card__info-price">50 ₾</div>
-            </div>
+          <div class="blog__post-name">
+            9 tips for pregnant women to survive the summer heat
           </div>
-          <div class="card">
-            <div class="card__img radius">
-              <img src="images/gift-card.png" alt="">
-            </div>
-            <div class="card__info">
-              <div class="card__info-name">Gift Card 50 GEL</div>
-              <div class="card__info-category">Gifts Cards</div>
-              <div class="card__info-stock">In Stock</div>
-              <div class="card__info-price">50 ₾</div>
-            </div>
+          <div class="blog__post-description">
+            Summer, hurray! The days are longer and the temperature is soaring that we can't wait to get out...
           </div>
-          <div class="card">
-            <div class="card__img radius">
-              <img src="images/gift-card.png" alt="">
-            </div>
-            <div class="card__info">
-              <div class="card__info-name">Gift Card 50 GEL</div>
-              <div class="card__info-category">Gifts Cards</div>
-              <div class="card__info-stock">In Stock</div>
-              <div class="card__info-price">50 ₾</div>
-            </div>
+          <div class="blog__post-info">
+            <div class="blog__post-date">2 days ago</div>
+            <div class="blog__post-read">6 min read</div>
           </div>
         </div>
+        <!-- <div class="reviewsandquestions__reviews-wrapper tabs__item show" data-content="1">
+          <div class="reviewsandquestions__reviews">
+            <img class="icon__delete" src="images/delete.svg" alt="">
+            <img class="icon__edit" src="images/edit.svg" alt="">
+            <img class="icon__dots" src="images/icon-dots.svg" alt="">
+            <div class="reviewsandquestions__reviews-img">
+              <img src="images/reviews-img1.png" alt="">
+            </div>
+            <div class="reviewsandquestions__reviews-info">
+              <div class="reviewsandquestions__reviews-info__name">Skv company julia light</div>
+              <div class="reviewsandquestions__reviews-info__rating">
+                <div class="reviewsandquestions__reviews-info__rating-stars">
+                  <img src="images/stars.svg" alt="">
+                </div>
+                <div class="reviewsandquestions__reviews-info__rating-date">September 3, 2021</div>
+              </div>
+              <div class="reviewsandquestions__reviews-info__review desktop">
+                Definitely the best quality. ✰✰✰✰✰ Thank you. . I am no longer talking about service and your favorite
+                consultant.
+              </div>
+            </div>
+          </div>
+          <div class="reviewsandquestions__reviews-info__review mobile">
+            Definitely the best quality. ✰✰✰✰✰ Thank you. . I am no longer talking about service and your favorite
+            consultant.
+          </div>
+          <div class="reviewsandquestions__reviews">
+            <img class="icon__delete" src="images/delete.svg" alt="">
+            <img class="icon__edit" src="images/edit.svg" alt="">
+            <img class="icon__dots" src="images/icon-dots.svg" alt="">
+            <div class="reviewsandquestions__reviews-img">
+              <img src="images/reviews-img2.png" alt="">
+            </div>
+            <div class="reviewsandquestions__reviews-info">
+              <div class="reviewsandquestions__reviews-info__name">Skv company julia light</div>
+              <div class="reviewsandquestions__reviews-info__rating">
+                <div class="reviewsandquestions__reviews-info__rating-stars">
+                  <img src="images/stars.svg" alt="">
+                </div>
+                <div class="reviewsandquestions__reviews-info__rating-date">September 3, 2021</div>
+              </div>
+              <div class="reviewsandquestions__reviews-info__review desktop">
+                Definitely the best quality. ✰✰✰✰✰ Thank you. . I am no longer talking about service and your favorite
+                consultant.
+              </div>
+            </div>
+          </div>
+          <div class="reviewsandquestions__reviews-info__review mobile">
+            Definitely the best quality. ✰✰✰✰✰ Thank you. . I am no longer talking about service and your favorite
+            consultant.
+          </div>
+        </div>
+        <div class="reviewsandquestions__questions-wrapper tabs__item" data-content="2">
+          <div class="reviewsandquestions__reviews">
+            <div class="reviewsandquestions__reviews-img">
+              <img src="images/reviews-img1.png" alt="">
+            </div>
+            <div class="reviewsandquestions__reviews-info">
+              <div class="reviewsandquestions__reviews-info__name">Skv company julia light</div>
+              <div class="reviewsandquestions__reviews-info__rating-date">September 3, 2021</div>
+              <div class="reviewsandquestions__reviews-info__review border desktop">
+                Hey! Please tell me the size of the crib?
+              </div>
+              <div class="reviewsandquestions__answer-wrapper desktop">
+                <div class="reviewsandquestions__answer-name">Store representative</div>
+                <div class="reviewsandquestions__answer-date">September 3, 2021</div>
+                <div class="reviewsandquestions__answer-answer">Hey! 132 X 72 X 103H. The dimensions of the crib are
+                  indicated in the product card</div>
+              </div>
+            </div>
+          </div>
+          <div class="reviewsandquestions__reviews-info__review border mobile">
+            Hey! Please tell me the size of the crib?
+          </div>
+          <div class="reviewsandquestions__answer-wrapper radius mobile">
+            <div class="reviewsandquestions__answer-name">Store representative</div>
+            <div class="reviewsandquestions__answer-date">September 3, 2021</div>
+            <div class="reviewsandquestions__answer-answer">Hey! 132 X 72 X 103H. The dimensions of the crib are
+              indicated in the product card</div>
+          </div>
+        </div> -->
       </div>
     </section>
 
@@ -97,7 +161,7 @@
         <div class="subscribe__wrapper">
           <form class="form__search">
             <input type="text" placeholder="Email address">
-            <button><img src="images/arrow-search.svg" alt=""></button> 
+            <button><img src="images/arrow-search.svg" alt=""></button>
           </form>
           <p class="subscribe__policy">By registering, you agree to our <a href="#">privacy policy</a>. </p>
         </div>
