--- a/app/contacts.html
+++ b/app/contacts.html
@@ -18,21 +18,25 @@
 
   <div class="main__wrapper">
     
-    <section class="error">
+    <section class="contacts">
       <div class="container">
         <ul class="breadcrumb">
           <li><a href="#">Home</a></li>
-          <li>Error 404</li>
+          <li>Contacts</li>
         </ul>
-        <h1 class="error__title">404</h1>
-        <p class="error__text">
-          Sorry, the page you requested was not found 
-        </p>
-        <form class="form__search">
-          <input type="text" placeholder="Search product">
-          <button><img src="images/arrow-search.svg" alt=""></button> 
-        </form>
-        <p class="error__text">Start for <a href="#">home page</a></p>
+        <h1 class="contacts__title">Contacts</h1>
+        <h2 class="contacts__subtitle">Visit Us</h2>
+        <ul class="contacts__list">
+          <li class="contacts__list-item"><span>Address: </span>Georgia, Tbilisi, 25 Al. Kazbegi Ave. (M2 Building)</li>
+          <li class="contacts__list-item"><span>Working Hours: </span>Mon - Sun | 10:00 - 19:00</li>
+          <li class="contacts__list-item"><span>Phone: </span><a href="#">599 84 56 76</a></li>
+          <li class="contacts__list-item"><span>Delivery time: </span>0-1 days</li>
+        </ul>
+        <div class="contacts__map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7643640630536!2d44.753540315678215!3d41.72560328292205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044731f0266a54b%3A0xe07caa4f6062f26b!2sm2%20at%20Kazbegi!5e0!3m2!1sru!2sru!4v1639327242631!5m2!1sru!2sru"
+            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
       </div>
     </section>
 
