--- a/app/blog.html
+++ b/app/blog.html
@@ -44,12 +44,12 @@
           <li>Reviews and questions</li>
         </ul>
         <ul class="blog__tabs">
-          <li class="blog__tabs-item active__blog-tab" data-btn="1">Furniture</li>
-          <li class="blog__tabs-item" data-btn="2">Advice</li>
-          <li class="blog__tabs-item" data-btn="3">Emotions</li>
-          <li class="blog__tabs-item" data-btn="4">Selection of goods</li>
-          <li class="blog__tabs-item" data-btn="5">6 and older</li>
-          <li class="blog__tabs-item" data-btn="6">From 2 to 6</li>
+          <li class="blog__tabs-item active__blog-tab" data-btn="1"><span>Furniture</span></li>
+          <li class="blog__tabs-item" data-btn="2"><span>Advice</span></li>
+          <li class="blog__tabs-item" data-btn="3"><span>Emotions</span></li>
+          <li class="blog__tabs-item" data-btn="4"><span>Selection of goods</span></li>
+          <li class="blog__tabs-item" data-btn="5"><span>6 and older</span></li>
+          <li class="blog__tabs-item" data-btn="6"><span>From 2 to 6</span></li>
         </ul>
         <div class="blog__box">
           <div class="blog__box-search"></div>
